src/test/resources/typeSystemTestModels/valid/interfaces/InterfaceCannotExtendClasses.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.interfaces;

import java.util.List;

public interface InterfaceCannotExtendClasses extends List {


}
